chore: docker 설정 수정